--- a/renderer/pages/_app.module.css
+++ b/renderer/pages/_app.module.css
@@ -1,8 +1,19 @@
 .homeTitle {
     grid-area: title;
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    /* gap: 1em; */
     align-items: center;
     background-color: #18181b;
     height: 50px;
+    padding: 0 1em;
+}
+
+.link {
+    cursor: pointer;
+    padding: 1em;
+}
+
+.link:hover {
+    background-color: rgba(255, 255, 255, 0.1);
 }
