--- a/renderer/pages/environments/[id]/consumer/consumer.module.css
+++ b/renderer/pages/environments/[id]/consumer/consumer.module.css
@@ -1,15 +1,41 @@
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.h2 {
+    text-align: center;
+    width: 100%;
+    word-wrap: break-word;
+}
+
 .messages {
     padding: 15px;
     display: flex;
     flex-direction: column;
     gap: 1em;
+    /* max-height: 70vh; */
+    overflow-y: scroll;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: 50px;
+    min-width: 300px;
 }
 
 .message {
     background-color: #1f1f23;
     padding: 1em 1.5em;
-    max-width: 500px;
+    /* max-width: 500px; */
     word-wrap: break-word;
+    width: 100%
 }
 
 .topic {
