--- a/renderer/pages/environments/[id]/consumer/index.module.css
+++ b/renderer/pages/environments/[id]/consumer/index.module.css
@@ -1,3 +1,26 @@
 .main {
+    /* display: flex; */
+    /* max-height: 90vh; */
+    /* position: absolute; */
+    display: grid;
+    grid-template-areas:
+        "addConsumer"
+        "consumers";
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 1fr;
+    left: 0;
+    right: 0;
+    top: 50px;
+    bottom: 0;
+    position: absolute;
+}
+
+.addConsumer {
+    grid-area: addConsumer;
+}
+
+.consumersContainer {
+    grid-area: consumers;
     display: flex;
+    gap: 1em;
 }
