--- a/renderer/pages/environments/[id]/consumer/index.module.css
+++ b/renderer/pages/environments/[id]/consumer/index.module.css
@@ -11,7 +11,7 @@
     left: 0;
     right: 0;
     top: 50px;
-    bottom: 0;
+    bottom: 1em;
     position: absolute;
 }
 
@@ -23,4 +23,5 @@
     grid-area: consumers;
     display: flex;
     gap: 1em;
+    justify-content: left;
 }
