--- a/renderer/pages/environments/[id]/consumers/index.module.css
+++ b/renderer/pages/environments/[id]/consumers/index.module.css
@@ -1,14 +1,13 @@
 .main {
     padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .consumer {
+    padding: 1em;    
     background-color: #1f1f23;
-    padding: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
 }
 
 .consumer:hover {
