--- a/renderer/pages/_app.module.css
+++ b/renderer/pages/_app.module.css
@@ -1,8 +1,7 @@
 .homeTitle {
     grid-area: title;
     display: flex;
-    justify-content: start;
-    /* gap: 1em; */
+    justify-content: flex-start;
     align-items: center;
     background-color: #18181b;
     height: 50px;
