--- a/renderer/components/consumer/consumer.module.css
+++ b/renderer/components/consumer/consumer.module.css
@@ -42,7 +42,7 @@
 }
 
 .topic {
-    font-weight: 800;
+    font-weight: 600;
     word-wrap: break-word;
 }
 
@@ -54,4 +54,14 @@
     0% {background-color: #1f1f23;}
     50% {background-color: rgb(136, 136, 47);}
     100% {background-color: #1f1f23;}
+}
+
+.partitionKey {
+    border-bottom: 1px solid rgb(140, 140, 140);
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+}
+
+.title {
+    font-weight: 600;
 }
