--- a/renderer/components/input/select.module.css
+++ b/renderer/components/input/select.module.css
@@ -32,6 +32,11 @@
     justify-content: space-between;
 }
 
+.valueText {
+    overflow-wrap: break-word;
+    max-width: 90%;
+}
+
 .search {
     position: absolute;
     margin: 1em 1em 1em 1em;
@@ -58,6 +63,8 @@
     right: 0;
     left: 0;
     margin: 1em 1em 1em 1em;
+    overflow-y: auto;
+    max-height: 200px;
 }
 
 .option {
